# consult-interface

./: .gitignore  README.md  pyproject.toml
concept/: consultSerial.py  dtc.py  ser.py  serialloopbacktest.py  tmp.py
concept/server/: client.py  server.py  tcp_serial_client.py
consult_interface/: __init__.py  ci_serial.py  definition.py  params.py  utils.py
consult_interface/cli/: cli.py
consult_interface/cli/commands/: cmd_params.py
mock_ecu/: behaviors.json  ecu_serial.py  frames_1.hex
tests/: conftest.py  data_registry.py  test_frame.py  test_params.py  test_utils.py
tests/output/: first_frame.json
workflows/: ci.yml
