[tool.poetry]
name = "consult-interface"
version = "0.1.0"
description = ""
authors = ["Rob L. <solarisin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
timer = "^0.3.0"
click = "^8.1.7"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-html = "^4.1.1"

[tool.poetry.scripts]
cli = 'consult_interface.cli.cli:cli'

[tool.pytest.ini_options]
testpaths = "tests"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S.%f"
log_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S.%f"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
